--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <article>
       <h2>記事タイトル1</h2>
       <p>投稿日: 2023-04-22</p>
-      <p>ここに記事の要約または最初の段落を記述します。詳細については<a href="#">続きを読む</a>をクリックしてください。</p>
+      <p>ここに記事の要約または最初の段落を記述します。詳細については<a href="/202304221652.html">続きを読む</a>をクリックしてください。</p>
     </article>
 
     <article>
